tests/core/snapshots/postgres-view-select.md_merged.snap
---
source: tests/core/spec.rs
assertion_line: 238
expression: formatter
---
schema
@server
@upstream
@link(id: "main", src: "schema.sql", type: Sql)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type ActiveUser {
  email: String
  id: Int
  name: String
}

type Query {
  activeUsers(limit: Int, offset: Int): [ActiveUser]
  @postgres(
    table: "active_users"
    limit: "{{.args.limit}}"
    offset: "{{.args.offset}}"
  )
}
