tests/core/snapshots/rename-field.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream @link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Query {
  person1: User
  @http(url: "http://jsonplaceholder.typicode.com/users/1")
  @modify(name: "user1")
  person2: User
  @http(url: "http://jsonplaceholder.typicode.com/users/2")
  @modify(name: "user2")
}

type User {
  name: String
}
