tests/core/snapshots/request-to-upstream-batching.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server(batchRequests: true)
@upstream(batch: { delay: 1, headers: [], maxSize: 100 })
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Query {
  user(id: Int!): User
  @http(
    url: "http://jsonplaceholder.typicode.com/users"
    batchKey: ["id"]
    query: [{ key: "id", value: "{{.args.id}}" }]
  )
}

type User {
  id: Int
  name: String
}
