tests/core/snapshots/rest-api-post.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server
@upstream
@link(src: "operation-user.graphql", type: Operation)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Query {
  user(id: Int!): User
  @http(url: "http://jsonplaceholder.typicode.com/users/{{.args.id}}")
}

type User {
  id: Int!
  name: String!
}
