tests/core/snapshots/s3-delete-object.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
scalar JSON

type Query {
  deleteFile(key: String!): JSON
}

schema {
  query: Query
}
