tests/core/snapshots/s3-delete-object.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream @link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Query {
  deleteFile(key: String!): JSON
  @s3(bucket: "my-bucket", operation: "DELETE", key: "{{.args.key}}")
}
